--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "date-fns": "^2.16.1",
+    "formik": "^2.2.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
+    "reactstrap": "^8.7.1",
     "redux": "^4.0.5"
   },
   "scripts": {
