--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
     "reactstrap": "^8.7.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "xlsx": "^0.16.9"
   },
   "scripts": {
     "start": "react-scripts start",
